Fix margin spacing to be consistent with previous spacing

--- a/src/components/RadioInput/RadioInput.scss
+++ b/src/components/RadioInput/RadioInput.scss
@@ -9,6 +9,7 @@
     display: flex;
     gap: margins.$m-3;
     margin: margins.$m-3 0;
+    padding: paddings.$p-2 0 paddings.$p-3;
   }
 
   input[type='radio'],
